# secure_ai_agent_gateway

./: .env.example  Cargo.toml  README.md
config/: services.json
data/: agents.json  credentials.json  users.json
doc/: API_REFERENCE.md  ARCHITECTURE.md  STATUS.md
src/: lib.rs  main.rs  state.rs
src/audit/: logger.rs  mod.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  session.rs
src/config/: credentials.rs  mod.rs  services.rs  settings.rs
src/error/: types.rs
src/gateway/: credential_vault.rs  encryption.rs  mod.rs  proxy.rs  rate_limiter.rs  replay_guard.rs  scope_checker.rs  token_refresh.rs
src/models/: agent.rs  audit.rs  common.rs  credential.rs  mod.rs  service.rs  user.rs
src/routes/: admin.rs  auth.rs  credentials.rs  mod.rs  proxy.rs
src/storage/: file_store.rs  memory.rs  mod.rs  traits.rs
tests/: gateway_test.rs  user_test.rs
