[package]
name = "sec_ai_agent_gw"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Async traits
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# OAuth2 / OIDC
oauth2 = "4.4"
openidconnect = "3.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (for OAuth flows)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JWT handling
jsonwebtoken = "9.3"

# Time utilities (replay protection, token expiry)
chrono = { version = "0.4", features = ["serde"] }

# UUID for request IDs / nonces
uuid = { version = "1.10", features = ["v4", "serde"] }

# Environment config
dotenvy = "0.15"

# AES encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
